fix: update dokumentasi swagger
